Updating package namespace for OSM changesets. Updating Swagger data models. Fixing search issue in projects.
