# app/org/maproulette/controllers/api/TaskController.scala
@@ -20,7 +20,7 @@ import org.maproulette.exception.{
   StatusMessage
 }
 import org.maproulette.framework.model.{Challenge, Comment, User}
-import org.maproulette.framework.service.{CommentService, ServiceManager, UserService}
+import org.maproulette.framework.service.ServiceManager
 import org.maproulette.models.dal.mixin.TagDALMixin
 import org.maproulette.session.{
   SearchChallengeParameters,
@@ -29,7 +29,7 @@ import org.maproulette.session.{
   SessionManager
 }
 import org.maproulette.utils.Utils
-import org.maproulette.services.osm._
+import org.maproulette.provider.osm._
 import org.maproulette.provider.websockets.{WebSocketMessages, WebSocketProvider}
 import org.wololo.geojson.{FeatureCollection, GeoJSONFactory}
 import org.wololo.jts2geojson.GeoJSONReader
